Pridėtas veikiantis Delete mygtukas

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,9 @@
 /* styles.css */
-
+ .container {
+    margin: 0 auto;
+    background-color: #f4f4f4;
+  } 
+  
 body {
   font-family: 'Arial', sans-serif;
   margin: 0;
@@ -13,7 +17,7 @@ div {
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(20, 23, 21, 0.2);
 }
 
 h1 {
@@ -22,6 +26,9 @@ h1 {
 
 h2 {
   color: #555;
+  text-align: left;
+  margin-left: 200px;
+
 }
 
 label {
@@ -65,4 +72,17 @@ th {
 
 tr:nth-child(even) {
   background-color: #f9f9f9;
+}
+
+.text {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.text img {
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+  vertical-align: middle;
+  border-radius: 10px;
 }
