--- a/frontend/src/UserForm.css
+++ b/frontend/src/UserForm.css
@@ -1,6 +1,14 @@
 /* styles.css */
 
 /* Container styling */
+.forma {
+    margin-bottom: 15px;
+  }
+h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
 form {
     max-width: 400px;
     margin: 0 auto;
@@ -9,7 +17,8 @@ form {
   /* Input field styling */
   label {
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 5px;
+    font-weight: bold;
   }
   
   input,
@@ -20,17 +29,25 @@ form {
     box-sizing: border-box;
   }
   
+  input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
   /* Error message styling */
   .errorMessage {
     color: red;
-    margin-top: -8px;
-    margin-bottom: 16px;
+    font-size: 14px;
+    margin-top: 5px;
   }
   
   /* Button styling */
   button {
     background-color: #4caf50;
     color: white;
+    padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -39,4 +56,4 @@ form {
   button:hover {
     background-color: #45a049;
   }
-  
+
